@@ -1,9 +1,9 @@
 package com.dlv.sevendaysofcodejava.main;
 
 import com.dlv.sevendaysofcodejava.model.Movie;
-import com.dlv.sevendaysofcodejava.service.ConsumoAPI;
-import com.dlv.sevendaysofcodejava.service.ConverteDados;
 import com.dlv.sevendaysofcodejava.service.HTMLGenerator;
+import com.dlv.sevendaysofcodejava.service.ImdbApiClient;
+import com.dlv.sevendaysofcodejava.service.ImdbMovieJsonParser;
 import io.github.cdimascio.dotenv.Dotenv;
 
 import java.io.IOException;
@@ -11,20 +11,14 @@ import java.io.InputStream;
 import java.io.PrintWriter;
 import java.util.List;
 import java.util.Properties;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 public class Main {
 
-    private final ConsumoAPI consumo;
-    private ConverteDados conversor;
-    private String endereco;
     private final String apiKey;
+    private String endereco;
 
     public Main() {
-        this.consumo = new ConsumoAPI();
-        this.conversor = new ConverteDados();
-
         Dotenv dotenv = Dotenv.load();
         this.apiKey = dotenv.get("API_KEY");
 
@@ -46,14 +40,15 @@ public class Main {
 
 
     public void buscarPorId(List<String> ids) {
-        List<Movie> movies = ids.stream().map(id -> {
-            String url = this.endereco + "?i=" + id + "&apikey=" + this.apiKey;
-            // System.out.println("Buscando dados para ID: " + id + " na URL: " + url);
+        ImdbApiClient imdbApiClient = new ImdbApiClient(apiKey, endereco);
 
-            String json = consumo.obterDados(url);
-            Movie movie = conversor.obterDados(json, Movie.class);
-            return movie;
-        }).toList();
+        List<String> jsonMovies = ids.stream()
+                .map(imdbApiClient::getBody)
+                .collect(Collectors.toList());
+
+        String json = "[" + String.join(",", jsonMovies) + "]";
+
+        List<Movie> movies = new ImdbMovieJsonParser(json).parse();
 
         try (PrintWriter writer = new PrintWriter("movies.html")) {
             HTMLGenerator generator = new HTMLGenerator(writer);
